--- a/code.html
+++ b/code.html
@@ -1,6 +1,6 @@
 <!Doctype.html>
 <title>
-Penguinpedia.
+Penguinpedia. <--!do real work with external css and more than one page, stop playing games, and also change the freaking images-->
 </title>
 <link href="https://fonts.googleapis.com/css?family=Ranga&display=swap" rel="stylesheet">
 <body>
